--- a/styles/shows.css
+++ b/styles/shows.css
@@ -1,4 +1,4 @@
-@media (min-width: 1280px) {
+@media screen and (min-width: 1280px) {
   /* Navigation */
   nav {
     width: 100%;
@@ -541,4 +541,188 @@ body {
   width: 100vw;
 }
 
-/* MOBILE BREAKPOINT *//*# sourceMappingURL=shows.css.map */
+/* MOBILE BREAKPOINT */
+@media screen and (max-width: 767px) { /*767px*/
+  .navsection__title {
+    margin: auto;
+    width: 100%;
+    padding: 0.5rem; /*8px*/
+    text-align: center;
+  }
+  .navsection__menu--container {
+    display: flex;
+    width: 100vw;
+  }
+  .nav__text--container {
+    width: 50vw;
+    text-align: center;
+  }
+  .nav__text--container2 {
+    width: 50vw;
+    height: 4vh;
+    text-align: center;
+    border-bottom: 0.3rem solid #FFFFFF;
+  }
+  .nav__text--container h2 {
+    font-size: 1.5rem; /*24px*/
+    line-height: 2rem; /*36px*/
+    font-weight: 700;
+  }
+  h1 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+  }
+  h1 {
+    margin: 0%;
+    margin-top: 0%;
+    -webkit-margin-start: 0%;
+            margin-inline-start: 0%;
+  }
+  h3 { /*subheader*/
+    font-size: 0.875rem; /*14px*/
+    line-height: 1.375rem; /*22px*/
+    font-weight: 600;
+    margin: 0;
+  }
+  body p {
+    font-size: 0.813rem; /*13px*/
+    line-height: 1.125rem; /*18px*/
+  }
+  nav a.active {
+    text-decoration: none;
+    display: inline-block;
+    padding-left: 39%;
+    padding-right: 39%;
+    color: #FFFFFF;
+    font-weight: 700;
+  }
+  nav a.inactive {
+    color: #AFAFAF;
+    text-decoration: none;
+  }
+  footer {
+    font-size: 0.813rem; /*13px*/
+    line-height: 1.125rem; /*18px*/
+  }
+  /*labels and buttons
+  text size: 10px | line height 20px | text weight bold 700*/
+  /* HERO SECTION */
+  .hero__section {
+    width: 100vw;
+  }
+  .hero__img--container {
+    position: relative;
+    color: #FFFFFF;
+    background-image: url(../assets/Images/hero-shows.jpg);
+    background-size: cover;
+    height: 40vh;
+    width: 100vw;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+  }
+  .hero__img--container h1 {
+    position: absolute;
+    top: 20%;
+    padding-left: 1rem;
+    font-size: 1.5rem; /* 24px */
+    line-height: 2rem; /* 32px */
+    font-weight: 700;
+    text-align: left;
+    order: 1;
+  }
+  .hero__img--container h3 {
+    position: absolute;
+    top: 10%;
+    padding-left: 1rem;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+    order: 0;
+  }
+  .hero__opaque--filter {
+    position: absolute;
+    background-color: #323232;
+    opacity: 50%;
+    height: 100%;
+    width: 100%;
+  }
+  .soundcloud__container {
+    width: 90%;
+    height: 20%;
+    position: absolute;
+    top: 45%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  /* HERO SECTION */
+  /*Shows Section */
+  .shows__section {
+    display: flex;
+    padding: 1rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    flex-direction: column;
+  }
+  .shows__section h1 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+    padding-bottom: 1rem;
+  }
+  .shows__section h3 {
+    font-size: 0.875rem; /*13px*/
+    line-height: 1.375rem; /*22px*/
+    font-weight: 600;
+    margin-bottom: 1rem;
+  }
+  .shows__section h4 {
+    font-size: 0.875rem; /*13px*/
+    line-height: 1.125rem; /*18px*/
+    font-weight: 500;
+    color: #000000;
+    margin-top: 0;
+  }
+  .shows__section p {
+    color: #AFAFAF;
+    font-size: 0.813rem; /*13px*/
+    line-height: 1.375rem; /*22px*/
+    font-weight: 600;
+    margin: 0;
+  }
+  .footer__container {
+    background-color: #323232;
+    padding-left: 1.5rem;
+    padding-bottom: 1rem;
+  }
+  .footer__container h1 {
+    color: #FFFFFF;
+    font-size: 1.5rem; /*24px */
+    line-height: 2rem;
+    font-weight: 700;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+  .footer__socialicons {
+    display: flex;
+    justify-content: flex-start;
+    gap: 2rem;
+  }
+  .footer__socialicons img {
+    width: 1.5rem;
+    height: 1.5rem;
+    padding-bottom: 1rem;
+  }
+  .footer__container h3 {
+    color: #FFFFFF;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+  .footer__container P {
+    color: #FFFFFF;
+  }
+  .footer__logo--container {
+    margin-top: 3rem;
+  }
+}/*# sourceMappingURL=shows.css.map */
