--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -204,6 +204,7 @@ body {
         padding-top: 1.5rem;
         padding-bottom: 1.5rem;
         flex-direction: column;
+        border-bottom: .3rem solid map-get($colors , cta__text--col );
     }
 
     .shows__section h1 {
@@ -235,6 +236,30 @@ body {
         font-weight: 600;
         margin: 0;
     }
+
+    .dom__shows--container {
+        border-bottom: .3rem solid map-get($colors , cta__text--col );
+    }
+
+    .dom__table {
+        margin: 0;
+        width:100%;
+    }
+    .dom__table--row {
+        width: 100%;
+    }
+    .shows__button {
+        align-self: center;
+        background-color: map-get($colors , bandSite__black);
+        color: #FFFFFF;
+        height: 2.5rem; /*40px*/
+        width: 100%;
+        border-radius: 0.25rem; /*4px*/
+        border: none;
+    }
+
+
+    /*shows section*/
 
 
     .footer__container {
