--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -200,7 +200,6 @@ body {
 
     .shows__section {
         display: flex;
-        padding: 1rem;
         padding-top: 1.5rem;
         padding-bottom: 1.5rem;
         flex-direction: column;
@@ -212,6 +211,7 @@ body {
         line-height: 2rem;
         font-weight: 700;
         padding-bottom: 1rem;
+        padding-left: 1rem;
     }
 
     .shows__section h3 {
@@ -237,16 +237,16 @@ body {
         margin: 0;
     }
 
-    .dom__shows--container {
-        border-bottom: .3rem solid map-get($colors , cta__text--col );
+
+    .shows__container {
+        padding-left: 1rem;
+        padding-right:1rem;
+        
     }
 
-    .dom__table {
-        margin: 0;
-        width:100%;
-    }
-    .dom__table--row {
-        width: 100%;
+    .outerDiv {
+        border-bottom: 0.063rem solid map-get($colors , cta__text--col );
+        padding-bottom: 1rem;
     }
     .shows__button {
         align-self: center;
@@ -258,6 +258,7 @@ body {
         border: none;
     }
 
+    
 
     /*shows section*/
 
