--- a/styles/partials/_tabletBreakpoint.scss
+++ b/styles/partials/_tabletBreakpoint.scss
@@ -146,13 +146,14 @@
 
     .footer__container {
         display: flex;
-        width: 100%;
+        width: 100vw;
         background-color: map-get($colors, bandSite__black );
-        padding-left: 3rem;
+        padding: 3rem;
         padding-bottom: 1rem;
         flex-wrap: wrap;
         justify-content: flex-start;
         color: #FFFFFF;
+        gap: 1rem;
         
     }
 
@@ -161,25 +162,19 @@
         font-size: 2.75rem; /*60px*/
         line-height: 2.75rem; /*44px */
         font-weight:700;
-        padding-top: 3rem;
-        padding-left: 2rem;
-        padding-right: 3.25rem;
         order: 0;
         width: 18rem; /* 340 px */
-        height: 1rem; /* 148px */
-        text-align: center;
+        height: 3rem; /* 148px */
+        margin: 0;
         
     }
 
     .footer__socialicons { 
         display: flex;
-       
-        padding-top: 4.75rem;
-        padding-bottom: 4.75rem;
-        padding-right: 4.75rem;
         order: 1;
-        width: 20rem;
-        align-items: center;
+        width: 22rem;
+        justify-self: left;
+        
     }
 
     .footer__socialicons img {
@@ -190,66 +185,57 @@
 
     .footer__logo--container{
         order: 3;
-        margin-right: 3rem;
         width: 8rem;
         height: 2rem;
-        margin-top: 5rem;
-        margin-left: 3rem;
+        padding: 2rem;
     }
 
     .footer__title {
         order:4;
         color: #FFFFFF;
-        padding-left: 3rem;
         width: 18rem;
     }
 
     .footer__title--extended {
         order: 5;
         color: #FFFFFF;
-        padding-left: 3rem;
-        width: 18rem;
+        width: 11rem;
     }
     .footer__paragraph{
         order:6;
         width: 18rem;
         text-align: left;
-        padding-left: 3rem;
     }
 
     .footer__paragraph--extended {
         order:7;
-        width: 18rem;
+        width: 9rem;
         text-align: left;
-        padding-left: 3rem;
     }
 
     .footer__email1 {
         order: 8;
         width: 18rem;
         text-align: left;
-        padding-left: 3rem;
     }
 
     .footer__email2 {
         order: 9;
         width: 18rem;
         text-align: left;
-        padding-left: 3rem;
     }
 
     .footer__email3 {
         order: 10;
-        width: 18rem;
+        width: 13rem;
         text-align: left;
-        padding-left: 3rem;
     }
+    
     .footer_copyright {
         order:11;
         color: #FFFFFF;
         width: 28rem;
         text-align: left;
-        padding-left: 3rem;
     }
     /*Footer Section */
 }
