--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -267,6 +267,8 @@ body {
         background-color: map-get($colors, bandSite__black );
         padding-left: 1.5rem;
         padding-bottom: 1rem;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .footer__container h1 {
@@ -283,6 +285,7 @@ body {
         display: flex;
         justify-content: flex-start;
         gap: 2rem;
+        margin: auto;
     }
 
     
