edits to bio page mobile

--- a/styles/shows.css
+++ b/styles/shows.css
@@ -601,6 +601,16 @@ body {
     padding-right: 1rem;
   }
   /* HERO SECTION */
+  /*Comments Section */
+  .user__icon--blank {
+    background-color: #E1E1E1;
+    opacity: 50%;
+    border-radius: 50%;
+    width: 2.25rem;
+    height: 2.25rem;
+    border: 0.25rem solid black;
+  }
+  /*comments Section*/
   /*Shows Section */
   .shows__section {
     display: flex;
