--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -196,6 +196,46 @@ body {
 
     /* HERO SECTION */
 
+    
+    /*Comments Section */
+
+
+    .user__icon--blank {
+        background-color: #E1E1E1;
+        opacity: 50%;
+        border-radius: 50%;
+        width: 2.25rem;
+        height: 2.25rem;
+        border: .25rem solid black;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    /*comments Section*/
+
+
     /*Shows Section */
 
     .shows__section {
