--- a/styles/partials/_desktopBreakpoint.scss
+++ b/styles/partials/_desktopBreakpoint.scss
@@ -191,6 +191,94 @@
     }
     /*gallery Section */
 
+    /*Shows Section */
+
+    .shows__section {
+        display: flex;
+        padding: 3rem;
+        //border-bottom: .3rem solid map-get($colors , cta__text--col );
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
+    .table__container {
+        width: 100%;
+    }
+
+    .show__table {
+        width: 100%;
+        table-layout: fixed;
+        border-collapse: collapse;
+    }
+
+    .shows__section h1 {
+        font-size: 3.75rem; /* 60px */
+        line-height: 4.25rem; /* 68px */ 
+        font-weight: 700;
+    }
+
+    .table__container th {
+        font-size: .875rem; /*14px*/
+        line-height: 1.375rem;
+        font-weight: 600;
+        text-align: left;
+        color: map-get($colors ,cta__text--col);
+    }
+
+    .show__table tr {
+        padding: 1rem;
+    }
+
+    .table__row {
+        border-bottom: 2px solid map-get($colors , divider__line);
+        padding-bottom: 1rem;
+    }
+ 
+    .table__data--date {
+        font-size: .875rem;
+        line-height: 2rem;
+        font-weight: 700;
+    }
+
+
+    .ticket__button {
+        align-self: center;
+        background-color: map-get($colors , bandSite__black);
+        color: #FFFFFF;
+        height: 2.5rem; /*40px*/
+        width: 100%;
+        border-radius: 0.25rem; /*4px*/
+        border: none;
+    }
+                                         
+
+
+
+    
+    
+    
+    
+    
+    
+    /*Shows Section */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
