--- a/styles/partials/_tabletBreakpoint.scss
+++ b/styles/partials/_tabletBreakpoint.scss
@@ -1,4 +1,4 @@
-@use 'variables' as *;
+@use './variables' as *;
 
 
 
@@ -57,6 +57,91 @@
     }
 
     /* Navigation*/
+
+
+     /*ABOUT SECTION */
+
+     .about__section h1, .gallery__title h1 {
+        color: map-get($colors, bandSite__black );
+        font-size:  3.75rem; /* 60px */
+        line-height: 4.25rem; /* 68px */ 
+        font-weight: 700;
+        margin: 0;
+    }
+
+    .about__section {
+        padding: 3rem;
+    }
+    
+    .musician__image--container {
+        display: block;
+        background-image: url(../assets/Images/band.jpg);
+        background-size: cover;
+        margin-right: auto;
+        margin-left:auto;
+        margin-top: 3rem;
+        width: 75vw;
+        height: 50vh/* 550px */
+
+    }
+
+    .about__section--text h2 {
+        font-size: 1.5rem; /*24px*/
+        line-height: 2rem; /*32px */
+        font-weight:700;
+        padding-left: 3rem;
+        padding-right: 3rem;
+        margin-top: 2rem;
+    } 
+
+    .about__section--text h3 {
+        font-size: 0.875rem; /*14px*/
+        line-height: 2rem; /*32px */
+        font-weight:600;
+        padding-left: 3rem; /*36px*/
+    }
+
+    .about__section--text h4 {
+        padding-left: 3rem; /* 48px */
+        font-size: 1.5rem; /* 24px */
+        line-height: 2.75rem; /*44px */
+        margin-bottom: 0;
+    }
+
+    .about__section--text p {
+        font-size: 0.875rem; /*14px*/
+        line-height: 1.375rem; /* 22px */
+        font-weight: 500;
+        margin-right: 3rem
+    }
+
+    .about__body--container {
+        display: flex;
+        width: 100%;
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+
+    .about__body--paragraph {
+        margin: 1rem;
+    }
+
+    /*about Section*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     /* HERO SECTION */
 
