tablet breakpoint edit

--- a/styles/partials/_tabletBreakpoint.scss
+++ b/styles/partials/_tabletBreakpoint.scss
@@ -61,7 +61,7 @@
 
      /*ABOUT SECTION */
 
-     .about__section h1, .gallery__title h1 {
+     .about__section h1 {
         color: map-get($colors, bandSite__black );
         font-size:  3.75rem; /* 60px */
         line-height: 4.25rem; /* 68px */ 
@@ -209,6 +209,76 @@
 
     /* HERO SECTION */
     
+    /* Gallery Section */
+
+    .gallery__section {
+        display: flex;
+        background-color: #FAFAFA;
+        justify-content: center;
+        padding-bottom: 3rem;
+       
+    }
+    
+    .gallery__title {
+        padding:3rem;
+        background-color: #FAFAFA;
+        color: map-get($colors, bandSite__black );
+        font-size:  3.75rem; /* 60px */
+        line-height: 4.25rem; /* 68px */ 
+        font-weight: 700;
+        margin: 0;
+    }
+
+    .gallery__container {
+        display: flex;
+        width: 100%;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        padding-left: 3rem;
+        padding-right: 3rem;
+        overflow: hidden;
+        gap: 1rem;
+        //padding: 3rem;
+    }
+
+    .img__container {
+        flex: 0 0 33.333333%;
+        overflow: hidden;
+        position: relative;
+    }
+
+
+    .gallery__container img {
+        display: inline-block;
+        width: 23rem;
+        height: 12.5rem;
+    }
+
+    // .gallery__title h1 {
+    //     color: map-get($colors, bandSite__black );
+    //     font-size:  3.75rem; /* 60px */
+    //     line-height: 4.25rem; /* 68px */ 
+    //     font-weight: 700;
+    //     margin: 0;
+    // }
+
+    /*gallery Section */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     /* SHOWS Section */
 
     .shows__section {
