--- a/styles/shows.css
+++ b/styles/shows.css
@@ -507,11 +507,9 @@
     display: flex;
     width: 100%;
     flex-wrap: wrap;
-    justify-content: space-evenly;
     padding-left: 3rem;
     padding-right: 3rem;
     overflow: hidden;
-    gap: 1rem;
   }
   .img__container {
     flex: 0 0 33.333333%;
@@ -519,9 +517,9 @@
     position: relative;
   }
   .gallery__container img {
-    display: inline-block;
-    width: 23rem;
+    width: 20rem;
     height: 12.5rem;
+    padding: 0.5rem;
   }
   /*gallery Section */
   /* SHOWS Section */
