--- a/styles/partials/_tabletBreakpoint.scss
+++ b/styles/partials/_tabletBreakpoint.scss
@@ -289,9 +289,10 @@
         background-color: #E1E1E1;
         opacity: 50%;
         border-radius: 50%;
-        width: 3rem;
-        height: 3rem;
+        width: 48px;
+        height: 48px;
         margin: 0;
+        order: 0;
     }
 
     .user__icon--container {
@@ -328,6 +329,7 @@
         // justify-content: center;
         // flex-direction: column;
         width: 100%;
+        border-bottom: 1px solid map-get($colors, divider__line);
     }
 
     .form__container {
@@ -378,6 +380,7 @@
         background-color: map-get($colors , bandSite__black );
         margin-left: .75rem;
         margin-top: 1rem;
+        margin-bottom: 1rem;
         border-radius: 4px;
         float: right;
 
@@ -386,7 +389,43 @@
         }
     }
 
+    // .comment__card {
+    //     padding-top: 1rem;
+    // }
 
+
+    .saved__comment--container {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+
+    .comment__text {
+        padding-left: 4rem;
+        order: 3;
+        padding-bottom: 1rem;
+        margin: 0;
+    }
+
+    .comment__creator {
+        margin: 0;
+        padding-top: 2rem;
+        padding-left: 1rem;
+        order: 1;
+    }
+
+    .date__text {
+        flex: 2 1 auto;
+        text-align: right;
+        width: 2rem;
+        height: 2rem;
+        color: map-get($colors, cta__text--col);
+        font-size: 0.813rem; /*13px*/
+        padding-top: 1rem;
+        float: right;
+        order: 2;
+        margin: 0;
+    }
     
 
 
