--- a/styles/partials/_desktopBreakpoint.scss
+++ b/styles/partials/_desktopBreakpoint.scss
@@ -1,6 +1,12 @@
 @use './variables' as *;
 
+body {
+    margin: 0;
+}
 
+* {
+    margin: 0;
+}
 
 
 @media screen and (min-width: 1280px) {
@@ -8,6 +14,14 @@
     /* Navigation */
     nav {
         width: 100%;
+    }
+    
+    body {
+        margin: 0;
+    }
+
+    * {
+        margin: 0;
     }
 
     .navsection {
@@ -308,6 +322,136 @@
     
     /*Shows Section */
 
+    /*comment section*/
+
+    .add__comment {
+        display: flex;
+        justify-content: center;
+        // width: 5rem;
+    }
+
+    .add__comment p {
+        margin-bottom: 4px;
+        color: #AFAFAF;
+        font-size: 0.875rem;
+        line-height: 1.375rem;
+        font-weight: 400;
+    }
+
+
+    .comment__section h1 {
+        font-size: 3.75rem;
+        line-height: 4.25rem;
+        font-weight: 700;
+        padding-left: 3rem;
+    }
+
+    .user__icon--container {
+        border-radius: 50%;
+        padding-left: 2rem;
+        padding-right: 1rem;
+        padding-top: 2.5rem;
+    }
+
+    .user__icon {
+        height: 3rem;
+        width: 3rem;
+        border-radius: 50%;
+        
+        
+    }
+
+    .form__container {
+        width: 33rem;
+    }
+
+    .form__username {
+        height: 48px;
+        border-radius: 4px;
+        width: 100%;
+        position: inherit;
+        border: 1px solid map-get($colors, divider__line );
+        padding: 1rem;
+        box-sizing: border-box;
+
+        &:active, &:focus { // I think you said you wanted focus as well
+            border: 1px solid map-get($colors , bandSite__black );
+            outline: none; // add this
+            background-color: #ffffff;
+          }
+
+          &:invalid {
+            border: 1px solid red;
+          }
+    }
+
+
+    .comment__textbox {
+        width: 100%;
+        border: 1px solid map-get($colors, divider__line );
+        height: 96px;
+        border-radius: 4px;
+        padding: 1rem;
+        box-sizing: border-box;
+
+        &:active, &:focus { // I think you said you wanted focus as well
+            border: 1px solid map-get($colors , bandSite__black );
+            outline: none; // add this
+            background-color: #ffffff;
+          }
+
+          &:invalid {
+            border: 1px solid red;
+          }
+    }
+
+
+    .comment__button {
+        height: 40px;
+        width: 150px;
+        color: white;
+        background-color: #323232;
+        margin-left: 0.75rem;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        border-radius: 4px;
+        float: right;
+    }
+
+
+    .user__icon--blank {
+        background-color: #E1E1E1;
+        opacity: 50%;
+        border-radius: 50%;
+        width: 48px;
+        height: 48px;
+        margin: 0;
+        order: 0;
+        margin-top:2rem;
+        box-sizing: border-box;
+    }
+
+    .comment__card {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        width: 33rem;
+        padding: 3rem;
+        margin-right: 0;
+        
+    }
+
+    .saved__comment--container {
+        width: 100%;
+        margin: 0;
+        align-self: center;
+        justify-self: center;
+    }
+
+
+    /*comment section*/
 
 
 
