--- a/styles/partials/_tabletBreakpoint.scss
+++ b/styles/partials/_tabletBreakpoint.scss
@@ -293,6 +293,7 @@
         height: 48px;
         margin: 0;
         order: 0;
+        margin-top:2rem;
     }
 
     .user__icon--container {
@@ -332,6 +333,14 @@
         border-bottom: 1px solid map-get($colors, divider__line);
     }
 
+    .add__comment p {
+        margin-bottom: 4px;
+        color: #AFAFAF;
+        font-size: 0.875rem;
+        line-height: 1.375rem;
+        font-weight: 400;
+    }
+
     .form__container {
         width: 100%;
         padding-right: 3rem;
@@ -340,8 +349,12 @@
     .form__username {
         height: 48px;
         width: 100%;
-        position: inherit;
+        border-radius: 4px;
+        width: 100%;
+        // position: inherit;
         border: 1px solid map-get($colors, divider__line );
+        padding: 1rem;
+        box-sizing: border-box;
 
         &:active, &:focus { // I think you said you wanted focus as well
             border: 1px solid map-get($colors , bandSite__black );
@@ -361,6 +374,8 @@
     .comment__textbox {
         width: 100%;
         border: 1px solid map-get($colors, divider__line );
+        padding: 1rem;
+        box-sizing: border-box;
 
         &:active, &:focus { // I think you said you wanted focus as well
             border: 1px solid map-get($colors , bandSite__black );
