--- a/styles/partials/_desktopBreakpoint.scss
+++ b/styles/partials/_desktopBreakpoint.scss
@@ -433,14 +433,12 @@ body {
 
     .comment__card {
         display: flex;
-        justify-content: center;
         flex-direction: column;
-        align-items: center;
         margin: 0;
         width: 33rem;
         padding: 3rem;
         margin-right: 0;
-        height: auto;
+        height: 50vh;
         
     }
 
