--- a/styles/partials/_tabletBreakpoint.scss
+++ b/styles/partials/_tabletBreakpoint.scss
@@ -520,15 +520,13 @@
 
     .footer__container {
         display: flex;
-        width: 100vw;
         background-color: map-get($colors, bandSite__black );
         padding: 3rem;
-        padding-bottom: 1rem;
         flex-wrap: wrap;
-        justify-content: flex-start;
         color: #FFFFFF;
-        gap: 5%;
-        
+        flex-direction: row;
+        height: 32rem;
+        align-content: flex-start;
     }
 
     .footer__container h1 {
@@ -536,18 +534,18 @@
         font-size: 2.75rem; /*60px*/
         line-height: 2.75rem; /*44px */
         font-weight:700;
-        order: 0;
+        order: 1;
         width: 18rem; /* 340 px */
         height: 3rem; /* 148px */
         margin: 0;
-        
+        align-self: flex-start;
     }
 
-    .footer__socialicons { 
+    .footer__socialicons {
         display: flex;
-        order: 1;
-        width: 15rem;
-        justify-self: left;
+        order: 2;
+        height: 32px;
+        width: 192px;
     }
 
     .footer__socialicons img {
@@ -556,69 +554,88 @@
         height: 2rem;
     }
 
-    .footer__logo--container{
+    .footer__logo--container {
+        display: flex;
+        padding-right: 3rem;
+    }
+
+    .site__logo {
         order: 3;
-        width: 8rem;
-        height: 2rem;
-        margin:auto;
-        flex: 2 ;
+        height: 20px;
+        width: 120px;
+        flex-shrink: 0;
+        padding: 1rem;
+        margin-left: 14rem;
     }
 
     .footer__title {
-        order:4;
+        order: 4;
         color: #FFFFFF;
-        width: 18rem;
-        flex: 1 0 33%;
+        flex: 0 0 33.333333%;
+        width: 288px;
+        text-align: left;
+        margin: 0;
+        position: relative;
     }
 
+    .footer__title h3 {
+        max-width: 288px;
+        margin: 0;
+    }
+    
     .footer__title--extended {
-        order: 5;
+        order: 4;
         color: #FFFFFF;
-        width: 11rem;
-        flex: 1 0 33%;
-    }
-    .footer__paragraph{
-        order:6;
-        width: 18rem;
-        text-align: left;
-        flex: 1 0 33%;
+        flex: 0 0 33.333333%;
     }
 
+    .footer__paragraph{
+        order:5;
+        color: #FFFFFF;
+        width: 100px;
+        height: 25px;
+        flex: 0 0 33.333333%;
+        position: relative;
+        margin-top: 1rem;
+    }
+
+    
     .footer__paragraph--extended {
-        order:7;
-        width: 9rem;
-        text-align: left;
-        flex: 1 0 33%;
+        order:5;
+        color: #FFFFFF;
+        width: 100px;
+        height: 25px;
+        flex: 0 0 33.333333%;
     }
 
     .footer__email1 {
-        order: 8;
-        width: 18rem;
-        text-align: left;
-        flex: 1 0 33%;
+        order: 6;
+        width: 100px;
+        height: 25px;
+        flex: 0 0 33.333333%;
     }
 
     .footer__email2 {
-        order: 9;
-        width: 18rem;
-        text-align: left;
-        flex: 1 0 33%;
+        order: 6;
+        width: 100px;
+        height: 25px;
+        flex: 0 0 33.333333%;
     }
 
     .footer__email3 {
-        order: 10;
-        width: 13rem;
-        text-align: left;
-        flex: 1 0 33%;
+        order: 6;
+        width: 100px;
+        height: 25px;
+        flex: 0 0 33.333333%;
     }
-    
+
+
     .footer_copyright {
-        order:11;
+        order:7;
         color: #FFFFFF;
-        width: 100%;
-        text-align: left;
-        margin: auto;
+        
     }
+
     /*Footer Section */
 }
 /*TABLET BREAKPOINT */
