--- a/styles/partials/_tabletBreakpoint.scss
+++ b/styles/partials/_tabletBreakpoint.scss
@@ -521,12 +521,14 @@
     .footer__container {
         display: flex;
         background-color: map-get($colors, bandSite__black );
-        padding: 3rem;
+        padding: 2.25rem;
         flex-wrap: wrap;
         color: #FFFFFF;
         flex-direction: row;
         height: 32rem;
-        align-content: flex-start;
+        // align-content: flex-start;
+        justify-content: space-between;
+        margin: auto;
     }
 
     .footer__container h1 {
@@ -535,7 +537,7 @@
         line-height: 2.75rem; /*44px */
         font-weight:700;
         order: 1;
-        width: 18rem; /* 340 px */
+        width: 17rem; /* 340 px */
         height: 3rem; /* 148px */
         margin: 0;
         align-self: flex-start;
@@ -556,84 +558,93 @@
 
     .footer__logo--container {
         display: flex;
-        padding-right: 3rem;
+        order: 3;
+        right: 0;
+        margin-left: 6rem;
+        position: relative;
+        float: right;
     }
 
     .site__logo {
-        order: 3;
         height: 20px;
         width: 120px;
         flex-shrink: 0;
-        padding: 1rem;
-        margin-left: 14rem;
     }
 
     .footer__title {
         order: 4;
-        color: #FFFFFF;
-        flex: 0 0 33.333333%;
-        width: 288px;
-        text-align: left;
-        margin: 0;
-        position: relative;
+        width: 14rem;
+        height: 2.50rem;
+        position: static;
+        flex: 0 0 33.3333%;
+
     }
 
-    .footer__title h3 {
-        max-width: 288px;
-        margin: 0;
+    .footer__title2 {
+        order: 5;
+        width: 14rem;
+        height: 2.50rem;
+        flex: 0 0 33.3333%;
     }
-    
+
     .footer__title--extended {
-        order: 4;
-        color: #FFFFFF;
-        flex: 0 0 33.333333%;
-    }
-
-    .footer__paragraph{
-        order:5;
-        color: #FFFFFF;
-        width: 100px;
-        height: 25px;
-        flex: 0 0 33.333333%;
-        position: relative;
-        margin-top: 1rem;
-    }
-
-    
-    .footer__paragraph--extended {
-        order:5;
-        color: #FFFFFF;
-        width: 100px;
-        height: 25px;
-        flex: 0 0 33.333333%;
-    }
-
-    .footer__email1 {
         order: 6;
-        width: 100px;
-        height: 25px;
-        flex: 0 0 33.333333%;
+        width: 14rem;
+        height: 2.50rem;
+        flex: 0 0 33.3333%;
+    }
+
+    .footer__paragraph {
+        order: 7;
+        width: 14rem;
+        height: 2.50rem;
+        flex: 0 0 33.3333%;
+    }
+
+    .footer__paragraph2 {
+        order: 8;
+        width: 14rem;
+        height: 2.50rem;
+        flex: 0 0 33.3333%;
+    }
+
+    .footer__paragraph--extended {
+        order: 9;
+        width: 14rem;
+        height: 2.50rem;
+        flex: 0 0 33.3333%;
+    }
+    
+    .footer__email1 {
+        order: 10;
+        width: 14rem;
+        height: 2.50rem;
+        flex: 0 0 33.3333%;
     }
 
     .footer__email2 {
-        order: 6;
-        width: 100px;
-        height: 25px;
-        flex: 0 0 33.333333%;
+        order: 11;
+        width: 14rem;
+        height: 2.50rem;
+        flex: 0 0 33.3333%;
     }
 
     .footer__email3 {
-        order: 6;
-        width: 100px;
-        height: 25px;
-        flex: 0 0 33.333333%;
+        order: 12;
+        width: 14rem;
+        height: 2.50rem;
+        flex: 0 0 33.3333%;
     }
 
+    .copyright__container {
+        order: 13;
+        width: 100%;
+    }
 
-    .footer_copyright {
-        order:7;
-        color: #FFFFFF;
-        
+    .footer__copyright {
+        order: 13;
+        width: 100%;
+        height: 2.50rem;
     }
 
     /*Footer Section */
