Almost done with css

--- a/styles/partials/_tabletBreakpoint.scss
+++ b/styles/partials/_tabletBreakpoint.scss
@@ -526,9 +526,10 @@
         color: #FFFFFF;
         flex-direction: row;
         height: 32rem;
-        // align-content: flex-start;
+        align-content: flex-start;
         justify-content: space-between;
-        margin: auto;
+        height: max-content;
+        width: 100vw;
     }
 
     .footer__container h1 {
@@ -537,32 +538,41 @@
         line-height: 2.75rem; /*44px */
         font-weight:700;
         order: 1;
-        width: 17rem; /* 340 px */
+        width: 16rem; /* 340 px */
         height: 3rem; /* 148px */
         margin: 0;
         align-self: flex-start;
+        padding-bottom: 2.25rem;
+        padding-top: 2.25rem;
     }
 
     .footer__socialicons {
         display: flex;
         order: 2;
         height: 32px;
-        width: 192px;
+        width: 12rem;
+        position:static;
+        padding-top: 2.25rem;
+        padding-bottom: 2.25rem;
     }
 
     .footer__socialicons img {
         align-items: center;
         width: 4rem;
         height: 2rem;
+        position: relative;
     }
 
     .footer__logo--container {
         display: flex;
         order: 3;
         right: 0;
-        margin-left: 6rem;
+        margin-left: 10rem;
         position: relative;
         float: right;
+        padding: 2.25rem;
+        margin-right: 10rem;
+        left: 10rem;
     }
 
     .site__logo {
@@ -575,9 +585,11 @@
         order: 4;
         width: 14rem;
         height: 2.50rem;
-        position: static;
         flex: 0 0 33.3333%;
-
+        position: static;
+        padding-bottom: 2.25rem;
+        float: left;
+        
     }
 
     .footer__title2 {
@@ -585,6 +597,7 @@
         width: 14rem;
         height: 2.50rem;
         flex: 0 0 33.3333%;
+        position: sticky;
     }
 
     .footer__title--extended {
@@ -592,6 +605,7 @@
         width: 14rem;
         height: 2.50rem;
         flex: 0 0 33.3333%;
+        position: sticky;
     }
 
     .footer__paragraph {
@@ -599,6 +613,7 @@
         width: 14rem;
         height: 2.50rem;
         flex: 0 0 33.3333%;
+        padding-bottom: 2.25rem;
     }
 
     .footer__paragraph2 {
@@ -620,6 +635,7 @@
         width: 14rem;
         height: 2.50rem;
         flex: 0 0 33.3333%;
+        padding-bottom: 2.25rem;
     }
 
     .footer__email2 {
