--- a/styles/partials/_tabletBreakpoint.scss
+++ b/styles/partials/_tabletBreakpoint.scss
@@ -498,7 +498,7 @@
         display: block;
     }
 
-    .ticket__button {
+    .ticket__buy--button {
         align-self: center;
         background-color: map-get($colors , bandSite__black);
         color: #FFFFFF;
@@ -506,6 +506,21 @@
         width: 100%;
         border-radius: 0.25rem; /*4px*/
         border: none;
+        font-weight: 800;
+    }
+
+    .shows__table--row {
+        border-bottom: 1px solid map-get($colors , divider__line);
+        padding-bottom: 1rem;
+    }
+
+    .shows__table--row td {
+        padding-bottom: 1rem;
+        padding-top: 1rem;
+    }
+
+    .table__data--date {
+        font-weight: 800;
     }
                                                        
     /* Footer Section */
@@ -521,7 +536,8 @@
         align-content: flex-start;
         justify-content: space-between;
         height: max-content;
-        width: 100vw;
+        max-width: 1279px ;
+        white-space-collapse: discard;
     }
 
     .footer__container h1 {
@@ -559,12 +575,14 @@
         display: flex;
         order: 3;
         right: 0;
-        margin-left: 10rem;
-        position: relative;
+        //margin-left: 2rem;
+        position: sticky;
         float: right;
         padding: 2.25rem;
-        margin-right: 10rem;
+        //margin-right: 10rem;
         left: 10rem;
+        width: 14rem;
+        justify-content: flex-end;
     }
 
     .site__logo {
